--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -1,5 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en">
+  <meta charset="UTF-8"/>
+  <title>PivotalHacker Blog</title>
+</head>
 <body>
-<h1>Hello World</h1>
+
+<div id="react"></div>
+
+<script src="js/bundle.js"></script>
+
 </body>
 </html>
